[package]
name = "lines"
version = "0.2.0"
edition = "2021"
description = "Counts lines"
license = "MIT"
homepage = "https://github.com/havsalt/lines-rs"
authors = ["Havsalt <77575424+Havsalt@users.noreply.github.com>"]

[dependencies]
anstyle = "1.0"
clap = { version = "4.5", features = ["derive", "wrap_help"] }
colored = "2.1"
havsalt-clap-styles = "0.1"

[profile.release]
opt-level = "z"
